@@ -3,7 +3,7 @@ name: "libmsiecf"
 status: "alpha"
 features: [
     "debug_output", "tests", "tools", "python",
-    "source_package",
+    "git", "source_package",
     "cygwin", "gcc", "mingw", "msvscpp",
     "dpkg", "rpm"]
 
@@ -11,10 +11,14 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSVm1MNkw5cU1mUG8/"
 
 [git]
-url: "https://code.google.com/p/libmsiecf/"
+url: "https://github.com/libyal/libmsiecf.git"
+
+[development]
+main_object: "file"
+main_object_filename: "index.dat"
 
 [tests]
-features: ["valgrind"]
+features: ["profiles", "valgrind"]
 profiles: ["libmsiecf", "pymsiecf", "msiecfexport", "msiecfinfo"]
 example_filename1: "index.dat"
 example_filename2: "index2.dat"
