@@ -217,7 +217,7 @@ To have other code to determine if libmsiecf was compiled with libbfio support i
 
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/libmsiecf/
+https://github.com/libyal/libmsiecf/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
