@@ -30,6 +30,7 @@ In progress:
 
 20140930
 * removed README.macosx
+* changes for project site move
 
 20140731
 * bug fix in Python-bindings
